--- a/argocd/test-apps/app3.yaml
+++ b/argocd/test-apps/app3.yaml
@@ -12,5 +12,5 @@ spec:
   project: default
   source:
     path: argocd/example/app-of-app/webapp-3
-    repoURL: https://github.com/foxutech/kubernetes.git
+    repoURL: https://github.com/royjoydeep11/kubernetes.git
     targetRevision: HEAD
